# vexer

./: CMakeLists.txt  readme.md  vexer.pc.in
inc/: vector.h
src/: qsort.c  vector.c
